--- a/app/assets/stylesheets/variables/_colors.scss
+++ b/app/assets/stylesheets/variables/_colors.scss
@@ -1,2 +1,3 @@
-$blue-button: #2697d0;
+$blue-button: #529ecc;
 $place-holder: #858585;
+$transparent: rgba(#2d2d2d, 0.22);
