--- a/app/assets/stylesheets/variables/_fonts.scss
+++ b/app/assets/stylesheets/variables/_fonts.scss
@@ -1,2 +1,2 @@
 $hel-light: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-$hel-norm: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+$hel-norm: Helvetica Neue,HelveticaNeue,Helvetica,Arial,sans-serif;
